Fixed bug #41192 (Per Directory Values only work for one key)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@234778 c90b9560-bf6c-de11-be94-00142212c4b1